# email-mcp

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
app/: README.md  pubspec.yaml
app/android/app/: build.gradle.kts
app/android/app/src/main/: AndroidManifest.xml
app/android/app/src/main/kotlin/com/sessapps/email_mcp_app/: MainActivity.kt
app/ios/Runner/: Info.plist
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: main.dart
app/lib/models/: account.dart  email_message.dart  server_domain.dart
app/lib/screens/: account_form_screen.dart  accounts_screen.dart  compose_screen.dart  domain_form_screen.dart  domains_screen.dart  home_screen.dart  message_detail_screen.dart  messages_screen.dart  search_screen.dart  settings_screen.dart  unified_inbox_screen.dart
app/lib/services/: api_service.dart
app/lib/widgets/: empty_state.dart
app/macos/Runner.xcodeproj/: project.pbxproj
app/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
app/macos/Runner/Configs/: AppInfo.xcconfig
app/test/: widget_test.dart
app/web/: index.html  manifest.json
docs/: APP.ja.md  ARCHITECTURE.ja.md  README.ja.md
src/email_mcp/: __init__.py  __main__.py  config.py  crypto.py  database.py  imap_client.py  server.py  smtp_client.py  sync.py  web_ui.py
src/email_mcp/static/: style.css
src/email_mcp/templates/: index.html
