[project]
name = "email-mcp"
version = "0.1.0"
description = "MCP server for AI-safe access to self-hosted IMAP/SMTP email"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "cryptography>=48.0.0",
    "flask>=3.1.3",
    "html2text>=2025.4.15",
    "mcp[cli]>=1.27.2",
]

[project.scripts]
email-mcp-server = "email_mcp.server:run_server"
email-mcp-ui = "email_mcp.web_ui:run_web"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/email_mcp"]
